--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm; font-weight:bold;">/// <u>Mixtape</u></p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm; font-weight:bold;">///<u> Mixtape</u></p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">/// <u>Records</u></p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">///<u> Records</u></p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">/// <u>Calendar</u></p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">///<u> Calendar</u></p></font>
 </td>
 </tr>
 
@@ -59,7 +59,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2023.jpg" border="0" alt="cover_2023.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/x15guv8o6egg5xlqi2s7o/15from2023.zip?rlkey=3ii3foiq9xufwl4v6lsr0ma74&st=5817dmgu&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2023.jpg" border="0" alt="cover_2023.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2023.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2023.jpg" border="0" alt="records_2023.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/kwd0z6vjx9sxduwp52y74/calendar_2024.pdf?rlkey=d2j58z7q8kxu1dkctosvx3lfs&st=c7i9l2zv&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2024.jpg" border="0" alt="calendar_2024.jpg"></img></a></td>
 </tr>
@@ -72,7 +72,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2022.jpg" border="0" alt="cover_2022.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/j07q8a2aqyej5nj0z6evv/15from2022.zip?rlkey=awvwbkhpq8fuc9ks7inqrttew&st=vtujdqqx&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2022.jpg" border="0" alt="cover_2022.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2022.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2022.jpg" border="0" alt="records_2022.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/ez5jawlucjkzmf3hq4con/calendar_2023.pdf?rlkey=e2l8pbdaoo1iqlc5ga407k1wk&st=v7ytbhuw&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2023.jpg" border="0" alt="calendar_2023.jpg"></img></a></td>
 </tr>
@@ -85,7 +85,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2021.jpg" border="0" alt="cover_2021.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/tnpos24ence65fbrztuso/15from2021.zip?rlkey=prgbn5yima0g5hackax57rzk9&st=klswx3gc&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2021.jpg" border="0" alt="cover_2021.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2021.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2021.jpg" border="0" alt="records_2021.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/15mb51z72i8bc3h4x8sml/calendar_2022.pdf?rlkey=abndot3ifgq2vegwpaoct9t6r&st=vui2znlq&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2022.jpg" border="0" alt="calendar_2022.jpg"></img></a></td>
 </tr>
@@ -98,7 +98,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2020.jpg" border="0" alt="cover_2020.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/ywaq1gxobemu76kjge35g/15from2020.zip?rlkey=rwsf9uenpjoym2tacb7zdku5s&st=iob9bpat&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2020.jpg" border="0" alt="cover_2020.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2020.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2020.jpg" border="0" alt="records_2020.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/ioujapsubmbkglxd8krjm/calendar_2021.pdf?rlkey=2w4wxiugzkn02misupey04tgf&st=xtq6yy6t&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2021.jpg" border="0" alt="calendar_2021.jpg"></img></a></td>
 </tr>
@@ -111,7 +111,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2019.jpg" border="0" alt="cover_2019.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/w7ugkmzrghu3sygfnu6tu/15from2019.zip?rlkey=36yjgeejflo61y8kof74mpomn&st=6loehmu5&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2019.jpg" border="0" alt="cover_2019.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2019.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2019.jpg" border="0" alt="records_2019.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/21zvmp6g25bn4vueqdh6l/calendar_2020.pdf?rlkey=z8d3zbbtmpp2izbriro8i5u0l&st=3t3hyn37&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2020.jpg" border="0" alt="calendar_2020.jpg"></img></a></td>
 </tr>
@@ -124,7 +124,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/r9wnek5n65np9tl21muni/15from2018.zip?rlkey=j95dtpen9ltqhgeomcalth6ny&st=8zz1j2je&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2018.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -137,7 +137,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.0cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2017.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2017.jpg" border="0" alt="records_2017.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -150,7 +150,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.0cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2016.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2016.jpg" border="0" alt="records_2016.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -163,7 +163,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.0cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2015.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2015.jpg" border="0" alt="records_2015.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -176,7 +176,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.0cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2014.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2014.jpg" border="0" alt="records_2014.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -189,7 +189,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.0cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2013.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2013.jpg" border="0" alt="records_2013.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -226,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
