--- a/index.html
+++ b/index.html
@@ -33,9 +33,19 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
+<td><a target="_blank" href="https://www.dropbox.com/scl/fi/huhnnczcc9mzjtpn7doa1/15from2025.zip?rlkey=zryr8wyvw7zsjwazw0u0c3epr&st=k0803yat&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2025.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2025.jpg" border="0" alt="records_2025.jpg"></img></a></td>
 <td><a target="_blank" href="https://www.dropbox.com/scl/fi/02wsbiozbt6866cqatijq/calendar_2026.pdf?rlkey=l2lr8n1fxl7s2mki4i1katiz5&st=2pvnky3h&dl=0"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2026.jpg" border="0" alt="calendar_2026.jpg"></img></a></td>
+</tr>
+<tr>
+<td>&nbsp;
+<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Track / mp3-320: <a target="_blank" href="https://www.dropbox.com/scl/fi/huhnnczcc9mzjtpn7doa1/15from2025.zip?rlkey=zryr8wyvw7zsjwazw0u0c3epr&st=k0803yat&dl=0">Link</a></span></span></span></span></p>
+</td>
+</tr>
+<tr>
+<td>&nbsp;
+<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">1 Track / 24bit FLAC: <a target="_blank" href="https://www.dropbox.com/scl/fi/rzeqke7ucxd6xs6vnvjbj/Mix25_Complete.flac?rlkey=zn1vqs1itxbgm0rtvogq84euh&st=r2alvzqx&dl=0">Link</a></span></span></span></span></p>
+</td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
@@ -226,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
