--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
 </tr>
 <tr>
 <td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Track / mp3-320: <a target="_blank" href="https://www.dropbox.com/scl/fi/huhnnczcc9mzjtpn7doa1/15from2025.zip?rlkey=zryr8wyvw7zsjwazw0u0c3epr&st=k0803yat&dl=0">Link</a></span></span></span></span></p>
-</td>
-</tr>
-<tr>
-<td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">1 Track / 24bit FLAC: <a target="_blank" href="https://www.dropbox.com/scl/fi/rzeqke7ucxd6xs6vnvjbj/Mix25_Complete.flac?rlkey=zn1vqs1itxbgm0rtvogq84euh&st=r2alvzqx&dl=0">Link</a></span></span></span></span></p>
+<p align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;">15 Track / mp3-320: <a target="_blank" href="https://www.dropbox.com/scl/fi/huhnnczcc9mzjtpn7doa1/15from2025.zip?rlkey=zryr8wyvw7zsjwazw0u0c3epr&st=k0803yat&dl=0">Link</a></span></span></span></p>
+<p align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;">1 Track / 24bit FLAC: <a target="_blank" href="https://www.dropbox.com/scl/fi/rzeqke7ucxd6xs6vnvjbj/Mix25_Complete.flac?rlkey=zn1vqs1itxbgm0rtvogq84euh&st=r2alvzqx&dl=0">Link</a></span></span></span></p>
 </td>
 </tr>
 
@@ -236,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
